--- a/src/r/dra.Rmd
+++ b/src/r/dra.Rmd
@@ -12,6 +12,7 @@ library(ggplot2)
 library(tidyverse)
 library(grid)
 library(gridExtra)
+library(scales)
 ```
 
 # 2. Load datasets
@@ -49,7 +50,7 @@ The code block below will plot that. I chose a color palette that is color-blind
 # Create histogram of reaction distribution
 p1 = ggplot(drsa, aes(x=value, fill=id)) +
   geom_histogram(bins=100, show.legend=TRUE) +
-  scale_y_log10() +
+  #scale_y_log10() +
   theme_minimal() +
   xlim(-0.5, 0.5) +
   theme(plot.title = element_text(size=10),
@@ -71,7 +72,9 @@ p1 = ggplot(drsa, aes(x=value, fill=id)) +
                              "Day 14 / Day 7",
                              "Day 21 / Day 14")) 
 p1
+p1 + scale_y_log10(limits=c(1, 1e7))
 ```
+
 # 4. Create categorical scatter plots
 To show where each reaction lies in the distribution, I created categorical scatterplots. 
 
